--- a/src/components/layout/Navbar/navbar.module.scss
+++ b/src/components/layout/Navbar/navbar.module.scss
@@ -1,4 +1,4 @@
-@use '@/styles/index'as *;
+@use '@/styles/index' as *;
 
 @keyframes gradient-flow {
     0% {
@@ -25,14 +25,14 @@
     top: $spacing-lg;
     z-index: $z-index-fixed;
     max-width: 45rem;
-    width: calc(100% - #{$spacing-xl} * 2);
-    inset-inline: 0;
+    width: calc(100% - #{$spacing-xl} * 2 - var(--removed-body-scroll-bar-size, 0px));
+    inset-inline: 0 var(--removed-body-scroll-bar-size, 0px);
     margin-inline: auto;
     background: var(--navbar-bg-default);
     border: 2px solid var(--border-color-subtle);
     backdrop-filter: $backdrop-blur-sm;
     box-shadow: none;
-    transition: $transition-base;
+    transition: background-color $transition-base, border-color $transition-base, backdrop-filter $transition-base ;
 
     &:global(.scrolled) {
         background: var(--navbar-bg-scrolled);
